# public-good-game

./: README.md
FAIRGAME/: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FOLLOWUP_RUNS.md  GOVERNANCE.md  NOTICE.md  README.md  api.py  crsd_analysis.py  download_model.py  kaggle_build_vllm_wheels.py  kaggle_crsd_cell.py  kaggle_crsd_followup_notebook.py  kaggle_crsd_notebook.py  kaggle_game_round_patch.b64  kaggle_notebook.py  kaggle_notebook_online.py  kaggle_pgg_followup_notebook.py  kaggle_pgg_punish_notebook.py  main.py  pgg_punish_analysis.py  requirements.txt  setup.cfg
FAIRGAME/kaggle_run/: README_KAGGLE_API.md  run_on_kaggle.py
FAIRGAME/kaggle_run/pgg_punish/: kernel-metadata.json
FAIRGAME/offline_patch_assets/: game_round.py
FAIRGAME/resources/config/: battle_sexes_nocomm_round_known_conventional.json  battle_sexes_nocomm_round_not_known_conventional.json  harmony_game_nocomm_round_known_conventional.json  harmony_game_nocomm_round_not_known_conventional.json  prisoner_dilemma_nocomm_round_known_conventional.json  prisoner_dilemma_nocomm_round_known_harsh.json  prisoner_dilemma_nocomm_round_known_mild.json  prisoner_dilemma_nocomm_round_not_known_conventional.json  prisoner_dilemma_nocomm_round_not_known_mild.json  (+5 more)
FAIRGAME/src/: agent.py  batch_runner.py  fairgame.py  fairgame_factory.py  game_history.py  game_round.py  payoff_matrix.py  prompt_creator.py
FAIRGAME/unit_tests/: test_api.py  test_crsd.py  test_game.py  test_multiagent_game.py  test_pgg_punish.py  test_prisoner_dilemma.py  test_prompts.py  test_translation.py
(+255 files in other folders)
