[metadata]
name = fairgame
version = 0.0.1
author = Alessio Buscemi
description = A Framework for AI Agents Bias Recognition using Game Theory
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://github.com/alessiobuscemi/FAIRGAME
    Source Code = https://github.com/alessiobuscemi/FAIRGAME
    Bug Tracker = https://github.com/alessiobuscemi/FAIRGAME/issues
keywords = python, llm, bias
license = Apache License Version 2.0
license_files = LICENSE.md

[options]
python_requires = >=3.12
packages=find:
install_requires = file: requirements.txt
include_package_data = True

[options.package_data]
fairgame.resources = *